--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section><section class="cid-qTkAaeaxX5" id="footer1-2">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-qTkAaeaxX5" id="footer1-2">
 
     
 
