--- a/index.html
+++ b/index.html
@@ -65,12 +65,9 @@
                     <span class="mbri-responsive mbr-iconfont"></span>
                 </div>
                 <div class="card-box align-center">
-                    <h4 class="card-title mbr-fonts-style display-7">
-                        CHILLERS
-                    </h4>
-                    <p class="mbr-text mbr-fonts-style display-7">
-                       LOCATED IN LEVEL-2 PLANT ROOM
-                    </p>
+                    <h4 class="card-title mbr-fonts-style display-7">CHWP-RS.4 , RS.5 &amp; RS.6</h4>
+                    <p class="mbr-text mbr-fonts-style display-7">RETAIL SOUTH-END CHW SYSTEM 
+<br>LOCATED IN LEVEL-2 PLANT ROOM</p>
                     <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
@@ -82,7 +79,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
 
     
 
