--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         CHWP-RS.1 , RS.2 &amp; RS.3</h4>
                     <p class="mbr-text mbr-fonts-style display-7">RETAIL NORTH-END CHW SYSTEM 
 <br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2XHIIgA" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -68,7 +68,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">CHWP-RS.4 , RS.5 &amp; RS.6</h4>
                     <p class="mbr-text mbr-fonts-style display-7">RETAIL SOUTH-END CHW SYSTEM 
 <br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34GVn53" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2z9sTVP" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
@@ -79,7 +79,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
 
     
 
