--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="features8 cid-rWpz06R1xy" id="features8-33">
 
     
 
@@ -123,7 +123,7 @@
                     <h4 class="card-title mbr-fonts-style display-7">
                         DWHS-RESIDENTIAL</h4>
                     <p class="mbr-text mbr-fonts-style display-7">DOMESTIC HOT WATER SYSTEM RESIDENTIAL<br>LOCATED IN L2 PLANT RM.</p>
-                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/34UcJLX" class="btn btn-secondary display-4" target="_blank">
+                    <div class="mbr-section-btn text-center"><a href="https://bit.ly/2Vi59HD" class="btn btn-secondary display-4" target="_blank">
                             More
                         </a></div>
                 </div>
